--- a/instrumentory/requirements.txt
+++ b/instrumentory/requirements.txt
@@ -12,6 +12,7 @@ charset-normalizer==2.0.12
 colorama==0.4.3
 cryptography==38.0.1
 distlib==0.3.6
+dj-database-url==1.0.0
 Django==4.1.1
 docker==4.4.4
 docker-compose==1.25.5
@@ -19,12 +20,14 @@ dockerpty==0.4.1
 docopt==0.6.2
 filelock==3.8.0
 future==0.16.0
+gunicorn==20.1.0
 idna==3.3
 jmespath==0.10.0
 jsonschema==3.2.0
 paramiko==2.11.0
 pathspec==0.9.0
 platformdirs==2.5.2
+psycopg2-binary==2.9.3
 pycparser==2.21
 PyNaCl==1.5.0
 pyrsistent==0.18.1
