--- a/instrumentory/requirements.txt
+++ b/instrumentory/requirements.txt
@@ -18,6 +18,7 @@ docker==4.4.4
 docker-compose==1.25.5
 dockerpty==0.4.1
 docopt==0.6.2
+environ==1.0
 filelock==3.8.0
 future==0.16.0
 gunicorn==20.1.0
