--- a/instrumentory/requirements.txt
+++ b/instrumentory/requirements.txt
@@ -14,11 +14,11 @@ cryptography==38.0.1
 distlib==0.3.6
 dj-database-url==1.0.0
 Django==4.1.1
+django-environ==0.9.0
 docker==4.4.4
 docker-compose==1.25.5
 dockerpty==0.4.1
 docopt==0.6.2
-environ==1.0
 filelock==3.8.0
 future==0.16.0
 gunicorn==20.1.0
