--- a/instrumentory/requirements.txt
+++ b/instrumentory/requirements.txt
@@ -15,6 +15,7 @@ distlib==0.3.6
 dj-database-url==1.0.0
 dj-rest-auth==2.2.5
 Django==4.1.1
+django-cors-headers==3.13.0
 django-environ==0.9.0
 djangorestframework==3.13.1
 docker==4.4.4
