--- a/instrumentory/requirements.txt
+++ b/instrumentory/requirements.txt
@@ -18,6 +18,7 @@ Django==4.1.1
 django-cors-headers==3.13.0
 django-environ==0.9.0
 djangorestframework==3.13.1
+djangorestframework-simplejwt==5.2.0
 docker==4.4.4
 docker-compose==1.25.5
 dockerpty==0.4.1
@@ -33,6 +34,7 @@ pathspec==0.9.0
 platformdirs==2.5.2
 psycopg2-binary==2.9.3
 pycparser==2.21
+PyJWT==2.4.0
 PyNaCl==1.5.0
 pyrsistent==0.18.1
 python-dateutil==2.8.2
