--- a/instrumentory/requirements.txt
+++ b/instrumentory/requirements.txt
@@ -11,10 +11,12 @@ cffi==1.15.1
 charset-normalizer==2.0.12
 colorama==0.4.3
 cryptography==38.0.1
+defusedxml==0.7.1
 distlib==0.3.6
 dj-database-url==1.0.0
 dj-rest-auth==2.2.5
 Django==4.1.1
+django-allauth==0.51.0
 django-cors-headers==3.13.0
 django-environ==0.9.0
 djangorestframework==3.13.1
@@ -29,6 +31,7 @@ gunicorn==20.1.0
 idna==3.3
 jmespath==0.10.0
 jsonschema==3.2.0
+oauthlib==3.2.1
 paramiko==2.11.0
 pathspec==0.9.0
 platformdirs==2.5.2
@@ -38,9 +41,11 @@ PyJWT==2.4.0
 PyNaCl==1.5.0
 pyrsistent==0.18.1
 python-dateutil==2.8.2
+python3-openid==3.2.0
 pytz==2022.2.1
 PyYAML==5.4.1
 requests==2.26.0
+requests-oauthlib==1.3.1
 semantic-version==2.8.5
 six==1.14.0
 sqlparse==0.4.2
