--- a/instrumentory/frontend/package.json
+++ b/instrumentory/frontend/package.json
@@ -15,6 +15,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "relocate": "react-scripts build && rm -rf ../backend/build && mv -f build ../backend",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
