--- a/instrumentory/requirements.txt
+++ b/instrumentory/requirements.txt
@@ -3,7 +3,8 @@ attrs==22.1.0
 awsebcli==3.20.3
 bcrypt==4.0.0
 blessed==1.19.1
-botocore==1.23.54
+boto3==1.24.79
+botocore==1.27.79
 cached-property==1.5.2
 cement==2.8.2
 certifi==2022.6.15.1
@@ -19,6 +20,7 @@ Django==4.1.1
 django-allauth==0.51.0
 django-cors-headers==3.13.0
 django-environ==0.9.0
+django-storages==1.13.1
 djangorestframework==3.13.1
 djangorestframework-simplejwt==5.2.0
 docker==4.4.4
@@ -46,6 +48,7 @@ pytz==2022.2.1
 PyYAML==5.4.1
 requests==2.26.0
 requests-oauthlib==1.3.1
+s3transfer==0.6.0
 semantic-version==2.8.5
 six==1.14.0
 sqlparse==0.4.2
