--- a/instrumentory/instrumentory/frontend/package.json
+++ b/instrumentory/instrumentory/frontend/package.json
@@ -6,13 +6,16 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "async": "^2.6.4",
     "ejs": "^3.1.7",
     "jwt-decode": "^3.1.2",
+    "nth-check": "^2.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "terser": "^5.14.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
